--- a/src/ng2-smart-table/components/pager/pager.component.scss
+++ b/src/ng2-smart-table/components/pager/pager.component.scss
@@ -1,8 +1,65 @@
+.ng2-smart-pagination-nav {
+    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.ng2-items-perpage {
+    ul {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        li {
+            color: #959ca4;
+            display: inline-block;
+            span {
+                display: inline-block;
+                border: 1px solid #eceff2;
+                cursor: pointer;
+                width: 38px;
+                height: 32px;
+                text-align: center;
+                line-height: 32px;
+                font-size: 14px;
+            }
+            &.active {
+                span {
+                    color: #51535a;
+                    font-weight: 600;
+                    background: #fafbfc;
+                }
+            }
+            .ng2-pager-caption {
+                padding-left: 10px;
+            }
+            &:first-child {
+                span {
+                    border-radius: 6px 0 0 6px;
+                }
+            }
+            &:nth-child(2) {
+                span {
+                    border-radius: 0;
+                    border-left: none;
+                    border-right: none;
+                }
+            }
+            &:nth-child(3)  {
+                span {
+                    border-radius: 0 6px 6px 0;
+                }
+            }
+        }
+    }
+}
+
 .ng2-smart-pagination {
     display: inline-flex;
     font-size: .875em;
-    // padding: 0;
-    padding: 50px;
+    align-items: center;
+    padding: 10px 50px;
     .sr-only {
         position: absolute;
         width: 1px;
@@ -15,5 +72,36 @@
     }
     .ng2-smart-page-item {
         display: inline;
+        .ng2-smart-page-link {
+            color: #959ca4;
+            font-size: 15px;
+            display: block;
+            width: 30px;
+            height: 32px;   
+        }
+        a {
+            color: #959ca4;
+            font-size: 15px;
+            text-decoration: none;
+        }
+        &.ng2-pager-btn {
+            border: 1px solid #eceff2;
+            border-radius: 4px;
+            &.ng2-prev {
+                margin: 0 2px 0 15px;
+                background-size: contain;
+                background: url('~assets/img/icons/arrow-right.png') no-repeat center center;
+                transform: rotate(180deg);
+            }
+            &.ng2-next {
+                background-size: contain;
+                background: url('~assets/img/icons/arrow-right.png') no-repeat center 7px;
+            }
+        }
+        &.disabled {
+            &.ng2-pager-btn {
+                opacity: 0.4;
+            }
+        }
     }
 }
