--- a/src/ng2-smart-table/components/tbody/tbody.component.html
+++ b/src/ng2-smart-table/components/tbody/tbody.component.html
@@ -1,6 +1,7 @@
-<tr *ngFor="let row of grid.getRows()" (click)="userSelectRow.emit(row)" (mouseover)="rowHover.emit(row)" class="ng2-smart-row" [className]="rowClassFunction(row)" [ngClass]="{selected: row.isSelected}">
+<tr *ngFor="let row of grid.getRows(); let i = index" (click)="userSelectRow.emit(row)" (mouseover)="rowHover.emit(row)" class="ng2-smart-row" [className]="rowClassFunction(row)" [ngClass]="{selected: row.isSelected}">
   <td *ngIf="isMultiSelectVisible" class="ng2-smart-actions ng2-smart-action-multiple-select" (click)="multipleSelectRow.emit(row)">
-    <input type="checkbox" class="form-control" [ngModel]="row.isSelected">
+    <input type="checkbox" class="form-control" [ngModel]="row.isSelected" id="checkbox_{{i}}">
+    <label for="checkbox_{{i}}"></label>
   </td>
   <td *ngIf="!row.isInEditing && showActionColumnLeft" class="ng2-smart-actions">
     <ng2-st-tbody-custom [grid]="grid" (custom)="custom.emit($event)" [row]="row" [source]="source"></ng2-st-tbody-custom>
