--- a/src/ng2-smart-table/components/tbody/tbody.component.scss
+++ b/src/ng2-smart-table/components/tbody/tbody.component.scss
@@ -1,4 +1,23 @@
 :host {
+  > tr {
+    border-bottom: 1px solid #f5f6f8;
+    td {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
+      line-height: 1.5;
+      text-align: left;
+      color: #262933;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      &.ng2-smart-action-multiple-select {
+        text-align: center;
+      }
+      
+      &:nth-child(odd) {
+        color: #959ca4;
+      }
+    }
+  }
   .ng2-smart-row {
     &.selected {
       background: rgba(0, 0, 0, 0.05);
@@ -8,5 +27,53 @@
         text-align: center;
       }
     }
+  }
+
+  [type="checkbox"]:not(:checked),
+  [type="checkbox"]:checked {
+    position: absolute;
+    left: -9999px;
+  }
+
+  [type="checkbox"]:not(:checked) + label:after {
+    opacity: 0;
+    transform: scale(0);
+  }
+
+  [type="checkbox"] + label {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    background: #fff;
+    border: 1px solid #d2d8dd;
+    border-radius: 5px;
+    display: inline-block;
+    position: relative;
+    box-sizing: content-box;
+  }
+
+  [type="checkbox"]:checked + label {
+    background: #34daa6;
+    border: 1px solid #34daa6;
+    border-radius: 4px;
+  }
+  [type="checkbox"]:checked + label:after {
+    content: '';
+    width: 12px;
+    height: 8px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    background: transparent;
+    opacity: 0;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    opacity: 1;
   }
 }
