--- a/src/ng2-smart-table/components/thead/cells/title/title.component.scss
+++ b/src/ng2-smart-table/components/thead/cells/title/title.component.scss
@@ -1,24 +1,32 @@
 a.sort {
-
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: left;
+  color: #7a858e;
+  text-decoration: none;
   &.asc, &.desc {
     font-weight: bold;
 
     &::after {
       content: '';
       display: inline-block;
-      width: 0;
-      height: 0;
-      border-bottom: 4px solid rgba(0, 0, 0, 0.3);
-      border-top: 4px solid transparent;
-      border-left: 4px solid transparent;
-      border-right: 4px solid transparent;
-      margin-bottom: 2px;
+      margin-bottom: 0;
+      width: 7px;
+      height: 10px;
+      padding-left: 7px;
+      position: absolute;
+      top: 19px;
+      margin-left: 3px;
+      background-size: contain;
+      background: url('~assets/img/icons/arrow.png') no-repeat center center;
     }
   }
 
   &.desc::after {
     -webkit-transform: rotate(-180deg);
-            transform: rotate(-180deg);
-    margin-bottom: -2px;
+    transform: rotate(-180deg);
+    margin-bottom: 0;
   }
 }
